log
Thu 24 Aug 2023 02:54:12 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:16: error: ‘List’ {aka ‘struct List’} has no member named ‘actual’
   56 |     while (list->actual!=NULL){
      |                ^~
Compilation failed
239a3f1
Thu 24 Aug 2023 04:14:10 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:9: error: unused variable ‘actual’ [-Werror=unused-variable]
   54 |   Node *actual=list->head;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
61980ae
Thu 24 Aug 2023 04:14:32 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
62a2f3a
Thu 24 Aug 2023 04:18:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de6998a
Thu 24 Aug 2023 04:21:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d1d0c5a
Thu 24 Aug 2023 04:21:51 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   48 |     list->prev = list->current;
      |         ^~
Compilation failed
88ff615
Thu 24 Aug 2023 04:23:37 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
63895c9
Thu 24 Aug 2023 04:24:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | }
      | ^
Compilation failed
a06552c
Thu 24 Aug 2023 04:25:10 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1094eca
Thu 24 Aug 2023 04:25:55 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
8105519
Thu 24 Aug 2023 04:28:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   48 |     list->prev = list->current;
      |         ^~
Compilation failed
5b677e3
Thu 24 Aug 2023 04:29:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
ba1897f
Thu 24 Aug 2023 04:31:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55f2005
Thu 24 Aug 2023 04:32:54 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
a866342
Thu 24 Aug 2023 04:33:55 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
c4e1ed1
Thu 24 Aug 2023 06:46:13 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
904d185
Thu 24 Aug 2023 06:48:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:11: error: unused variable ‘current’ [-Werror=unused-variable]
   59 |     Node *current=list->head;
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c1b4abf
Thu 24 Aug 2023 06:49:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:11: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   59 |     Node *current=list->head;
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e6218e
Thu 24 Aug 2023 07:16:27 PM UTC: 
 list.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  6|4
total_score: 25/70
9e29497
Thu 24 Aug 2023 07:22:50 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b28a121
Thu 24 Aug 2023 07:26:18 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
3fd5d95
Thu 24 Aug 2023 08:43:49 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|3
total_score: 35/70
10d2b28
Thu 24 Aug 2023 08:46:57 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a516ae1
Sat 26 Aug 2023 03:19:56 AM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:114:12: error: expected identifier before ‘)’ token
  114 |   if(list->)
      |            ^
Compilation failed
4c70ec5
Sat 26 Aug 2023 03:20:47 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
812bb40
Sat 26 Aug 2023 03:24:32 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
4815cd6
Sat 26 Aug 2023 09:11:00 PM UTC: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  10|2
total_score: 45/70
199ae5f
Sat 26 Aug 2023 09:12:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3412aac
Sat 26 Aug 2023 09:17:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
774de6b
Sat 26 Aug 2023 09:29:03 PM UTC: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  10|2
total_score: 45/70
38a3258
Sat 26 Aug 2023 09:31:54 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function ‘pushCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:162:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  162 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:133:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  133 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
efca1e2
Sat 26 Aug 2023 09:32:22 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
3a55c23
Sat 26 Aug 2023 09:34:35 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
5594bb7
Sat 26 Aug 2023 09:38:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b9efbcb
Sat 26 Aug 2023 09:39:17 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
7076e9b
Sat 26 Aug 2023 10:49:14 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
c487abc
Sat 26 Aug 2023 10:50:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
078cedf
Sat 26 Aug 2023 11:45:35 PM UTC: 
 list.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:160:1: error: expected ‘;’ before ‘}’ token
  160 | }
      | ^
Compilation failed
3093996
Sat 26 Aug 2023 11:46:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2a8aef3
Sat 26 Aug 2023 11:46:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
4627064
Sat 26 Aug 2023 11:47:18 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
a29da93
Sat 26 Aug 2023 11:50:12 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
d0f3c88
Sat 26 Aug 2023 11:52:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
92f3516
